@@ -1,6 +1,6 @@
 Package: xcms
-Version: 1.21.0
-Date: 2009-10-11
+Version: 1.21.1
+Date: 2009-10-19
 Title: LC/MS and GC/MS Data Analysis
 Author: Colin A. Smith <csmith@scripps.edu>, 
         Ralf Tautenhahn <rtautenh@scripps.edu>,
